# nameweaver

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: backend-format.yml  backend-pipeline.yml  backend-quality.yml  frontend-pipeline.yml  frontend-quality.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  fly.toml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 221397ba1545_create_user_table.py  c7238ae053a0_create_user_id_column.py  f1a99df023a6_create_person_table.py
backend/src/backend/: __init__.py  app.py  settings.py
backend/src/backend/api/dependencies/: repositories.py  services.py
backend/src/backend/api/routes/: __init__.py  auth.py  health.py  people.py  users.py
backend/src/backend/api/schemas/: auth.py  pagination.py  people.py  users.py
backend/src/backend/domain/: exceptions.py
backend/src/backend/domain/models/: pagination.py  person.py  user.py
backend/src/backend/domain/repositories/: person_repository.py  user_repository.py
backend/src/backend/domain/security/: token_service.py
backend/src/backend/domain/services/: auth_service.py  person_service.py
backend/src/backend/infra/persistence/: database.py
backend/src/backend/infra/persistence/orm/: __init__.py  person.py  user.py
backend/src/backend/infra/persistence/repositories/: person_repository.py  sql_person_repository.py  sql_user_repository.py
backend/src/backend/infra/security/: password.py  token.py
backend/tests/: conftest.py
backend/tests/fixtures/: auth.py  client.py  database.py  people.py  repositories.py  services.py  users.py
backend/tests/integration/: test_people_e2e.py  test_sql_person_repository.py  test_sql_user_repository.py  test_users_e2e.py
backend/tests/unit/api/: test_auth.py  test_health.py  test_people.py  test_users.py
backend/tests/unit/dependencies/: test_current_user.py
backend/tests/unit/infra/: test_sql_person_repository.py
backend/tests/unit/security/: test_password.py  test_token.py
backend/tests/unit/services/: test_auth_service.py  test_person_service.py
frontend/: .dockerignore  .prettierignore  .prettierrc.json  Dockerfile  README.md  eslint.config.js  fly.toml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/shared/: AppHeader.test.tsx  AppHeader.tsx  ModeToggle.test.tsx  ModeToggle.tsx
frontend/src/components/ui/: empty.tsx  sonner.tsx
frontend/src/lib/: api-error.ts  pagination.ts
frontend/src/lib/api/: client.test.ts  (+3 more)
frontend/src/pages/: NotFoundPage.test.tsx  NotFoundPage.tsx
frontend/src/providers/: app-providers.tsx
frontend/src/routes/: AppRoutes.test.tsx  AppRoutes.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/test/: setup.ts
frontend/src/test-utils/: setup.ts
(+38 files in other folders)
