[project]
name = "backend"
version = "0.1.0"
description = "Remember people and relationships"
readme = "README.md"
authors = [
    { name = "Tomas Tamantini", email = "tomasbft@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
