[project]
name = "backend"
version = "0.1.0"
description = "Remember people and relationships"
readme = "README.md"
authors = [
    { name = "Tomas Tamantini", email = "tomasbft@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["PLR2004"]

[tool.ruff.format]
preview = true

[tool.taskipy.tasks]
pre_format = "ruff check --fix"
format = "ruff format"
run = "fastapi dev src/backend/app.py"
pre_test = "ruff check"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"